--- a/app/views/tehservices/edit.html.erb
+++ b/app/views/tehservices/edit.html.erb
@@ -3,9 +3,9 @@
   <div class="row">	  	
 	<div class="col-md-6">
   	<div  class="panel panel-info">
-  	  <div class="panel-heading"><strong>Редактирование ТО № <%= @tehservice.id %>:</strong></div> 		
+  	  <div class="panel-heading"><strong><span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>Редактирование ТО № <%= @tehservice.id %>:</strong></div> 		
 	  <div class="panel-body">
-		<%= simple_form_for(@tehservice, url: tehservices_create_path) do |f| %>
+		<%= simple_form_for(@tehservice, url: tehservices_update_path) do |f| %>
 			  	
 		  	<%= f.input :user_id, :as => :hidden %>
 		  	<%= f.input :id, :as => :hidden %>
@@ -23,12 +23,12 @@
             <div class="col-md-6">
             <div class="form-group"> 
 			  	<%= label_tag :"Введите тип сервиса" %>
-			  	<%= select_tag :stype, options_for_select([['Замена масла', 1], ['Техобслуживание', 3], ['Страховка', 2], ['Техосмотр', 4]] ),  class: "form-control"%>
+			  	<%= select_tag :stype, options_for_select([['Пробег', 0],['Замена масла', 1], ['Техобслуживание', 3], ['Страховка', 2], ['Техосмотр', 4]] ),  class: "form-control"%>
 		  	</div>
 		  	</div>
 		  	
 		  	<div class="col-md-6">
-		  	<%= f.input :sprice, label: "Стоимость сервиса, #{$valuta}", as: :integer %>
+		  	<%= f.input :sprice, label: "Стоимость сервиса, #{$valuta}", as: :integer, hint: "(для пробега стоимость не указывается)" %>
 		  	</div>
 		  	
 	    	<!-- дата  -->
@@ -40,7 +40,10 @@
 	        </div>	
 	    	<!-- время  -->
 	    	<div class="col-md-6">
-	        <%= f.input :sttime, as: :time ,label: "Время проведения работ" , default: @tehservice.sdate ? Time.parse(@tehservice.sdate.in_time_zone.strftime('%R')) : Time.parse(Time.current.strftime('%R')) %>	  	
+	    	<!-- время начала -->
+	    	<%= simple_fields_for :timebeg do |n| %>
+	        	<%= n.input :sttime, as: :time ,label: "Время проведения работ" , default: @tehservice.sdate ? Time.parse(@tehservice.sdate.in_time_zone.strftime('%R')) : Time.parse(Time.current.strftime('%R')), minute_step: 15 %>
+	        <% end %>	    		
 		  	</div>
 		  	
 		  	<%= f.input :comments , as: :text %>
