--- a/app/views/cars/autotech.html.erb
+++ b/app/views/cars/autotech.html.erb
@@ -3,8 +3,8 @@
 
 <script>
 $(document).ready(function() {
-    var table = $('#pstable1').DataTable( {
-        "order": [[ 1, "asc" ]],
+    var t = $('#pstable1').DataTable( {
+        "order": [[ 2, "asc" ]],
         "language": {
             "lengthMenu": "Отображать _MENU_ строк на странице",
             "zeroRecords": "Ничего не найдено - увы...",
@@ -33,43 +33,58 @@ $(document).ready(function() {
             className: 'control',
             orderable: false,
             targets:   0
-        } ] 
+        }, {
+            "searchable": false,
+            "orderable": false,
+            "targets": 1
+            }
+         ]      
     } ); 
+    
+    t.on( 'order.dt search.dt', function () {
+        t.column(1, {search:'applied', order:'applied'}).nodes().each( function (cell, i) {
+            cell.innerHTML = i+1;
+        } );
+    } ).draw();
+    
 } );
 </script>	  	  
 	 	  	
 	<table id="pstable1" class="table table-bordered table-condensed table-hover table-striped dt-responsive nowrap compact" style="width:100%">			
 			<thead>
 				<tr  class="info">
-					<th style="width:5%"></th>
+					<th style="width:3%"></th>
+			        <th style="width:2%" class="all"></th>
 					<th class="all">Автомобиль</th>
 					<th>Текущий пробег</th>
-					<th>ТO</th>
+					<th>Техобслуживание</th>
 					<th>Масло и фильтры</th>
 					<th>Страховка</th>
 					<th>Техосмотр</th>				
-					<th>Стоимость за текущий месяц</th>
-					<th>Стоимость за текущий год</th>
+					<th>Стоимость<br /> за текущий месяц</th>
+					<th>Стоимость<br /> за текущий год</th>
 					<th class="none">.......</th>					
 				</tr>
 			</thead>
 			<tfoot>
 				<tr  class="info">
-					<th style="width:5%"></th>
+					<th style="width:3%"></th>
+			        <th style="width:2%" class="all"></th>
 					<th class="all">Автомобиль</th>
 					<th>Текущий пробег</th>
 					<th>ТO</th>
 					<th>Масло и фильтры</th>
 					<th>Страховка</th>
 					<th>Техосмотр</th>				
-					<th>Стоимость за текущий месяц</th>
-					<th>Стоимость за текущий год</th>
+					<th>Стоимость<br /> за текущий месяц</th>
+					<th>Стоимость<br /> за текущий год</th>
 					<th class="none">.......</th>					
 				</tr>
 			</tfoot>			
 			<tbody>	
   	          <% @report.each do |item| %>
 				<tr>
+					<td></td>
 					<td></td>
 					<td><%= link_to "#{item[:marca_gnum]}",:controller => :tehservices, :action => :index ,:car_id => item[:car_id] %></td>
 					<td><%= item[:parcurs][:parcurs] %> <%= item[:parcurs][:wdate] ? "(#{item[:parcurs][:wdate]})" : '' %></td>
