--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -3,8 +3,8 @@
 
 <script>
 $(document).ready(function() {
-    $('#pstable2').DataTable( {
-        "order": [[ 1, "asc" ],[ 2, "asc" ]],
+    var t = $('#pstable2').DataTable( {
+        "order": [[ 2, "asc" ],[ 3, "asc" ]],
         "language": {
             "lengthMenu": "Отображать _MENU_ строк на странице",
             "zeroRecords": "Ничего не найдено - увы...",
@@ -33,15 +33,27 @@ $(document).ready(function() {
             className: 'control',
             orderable: false,
             targets:   0
-        } ]
+        }, {
+            "searchable": false,
+            "orderable": false,
+            "targets": 1
+            }
+         ]      
     } ); 
+    
+    t.on( 'order.dt search.dt', function () {
+        t.column(1, {search:'applied', order:'applied'}).nodes().each( function (cell, i) {
+            cell.innerHTML = i+1;
+        } );
+    } ).draw();
 } );
 </script>	  	  
 	 	  
 	<table id="pstable2" class="table table-bordered table-condensed table-hover table-striped dt-responsive nowrap compact" style="width:100%">
 		<thead>
 			<tr class="info">
-			   <th style="width:5%"></th>
+			   <th style="width:3%"></th>
+			   <th style="width:2%" class="all"></th>
 			   <th class="all">Марка</th>
 			   <th class="all">Гос. номер</th>
 			   <th class="none">........</th>
@@ -64,7 +76,8 @@ $(document).ready(function() {
 		</thead>
 		<tfoot>
 			<tr class="info">
-			   <th style="width:5%"></th>	
+			   <th style="width:3%"></th>
+			   <th style="width:2%" class="all"></th>	
 			   <th class="all">Марка</th>
 			   <th class="all">Гос. номер</th>
 			   <th class="none">........</th>
@@ -88,12 +101,15 @@ $(document).ready(function() {
 		<tbody>
 			<% @cars.each do |c| %>
 				   <% if c.updated_at > (Time.now.ago($GreenDelay)) %><tr class="success"><% else %><tr><% end %>
+				   	    <td></td>
 				   	    <td></td>			
 						<td><%= link_to "#{c.marca}" , cars_show_path(:id => c.id),:method => :get, :title => 'Посмотреть авто' %></td>
 						<td><%= link_to "#{c.gnum}" , cars_show_path(:id => c.id),:method => :get, :title => 'Посмотреть авто' %></td>
 						<td><%= link_to " " , cars_show_path(:id => c.id),:method => :get, :class=> "glyphicon glyphicon-eye-open", :title => 'Посмотреть авто' %>
-							<%= link_to " " , edit_car_path(c),:method => :get, :class=> "glyphicon glyphicon-pencil", :title => 'Редактировать авто' %>
-							<%= link_to " " , cars_destroy_path(:id => c.id),:method => :get, :class=> "glyphicon glyphicon-remove", :title => 'Удалить авто', data: { confirm: "Удалить авто #{c.id} #{c.marca} #{c.gnum}?" } %>
+							<% if current_user.superadmin_role? || current_user.supervisor_role? then %>
+								<%= link_to " " , edit_car_path(c),:method => :get, :class=> "glyphicon glyphicon-pencil", :title => 'Редактировать авто' %>
+								<%= link_to " " , cars_destroy_path(:id => c.id),:method => :get, :class=> "glyphicon glyphicon-remove", :title => 'Удалить авто', data: { confirm: "Удалить авто #{c.id} #{c.marca} #{c.gnum}?" } %>
+							<% end %>
 							<%= link_to " " , new_contract_path(:car_id => c.id),:method => :get, :class=> "glyphicon glyphicon-file", :title => 'Создать контракт' %>
 							<%= link_to " " , contracts_newbroni_path(:car_id => c.id),:method => :get, :class=> "glyphicon glyphicon-flag", :title => 'Создать бронь' %>
 							<%= " ID=#{c.id}" %></td>
