--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,9 +1,63 @@
-<% provide(:title, 'Клиенты') %>
+<% provide(:title, 'Клиенты') %>  	  
+	 	  	
+	<table id="clienttable" class="table table-bordered table-condensed table-hover table-striped nowrap compact" style="width:100%">	
+		<thead>
+			<tr class="info">
+			   <th style="width:3%"></th>
+			   <th style="width:2%" class="all"></th>
+			   <th class="all">ФИО</th>		
+			   <th class="none">......</th>
+			   <th class="min-tablet">E-mail Телефон</th>
+			   <th class="min-desktop">Паспорт</th>
+			   <th class="min-desktop">Дата рождения</th>
+			   <th class="min-desktop">IDNP</th>
+			   <th class="min-desktop">Страна</th>			   
+			   <th class="min-desktop">Адрес</th>			   
+			</tr>	
+		</thead>
+		<tfoot>
+			<tr class="info">
+			   <th style="width:3%"></th>
+			   <th style="width:2%" class="all"></th>
+			   <th class="all">ФИО</th>		
+			   <th class="none">......</th>
+			   <th class="min-tablet">E-mail Телефон</th>
+			   <th class="min-tablet-l">Паспорт</th>
+			   <th class="min-tablet-l">Дата рождения</th>
+			   <th class="min-tablet-l">IDNP</th>
+			   <th class="min-tablet-l">Страна</th>			   
+			   <th class="min-desktop">Адрес</th>			   
+			</tr>	
+		</tfoot>		
+		<tbody>
+			<% @clients.each do |cl| %>
+					<% if cl.updated_at > (Time.now.ago($GreenDelay)) %><tr class="success"><% else %><tr><% end %>
+						<td></td>	
+						<td></td>	
+						<td><%= cl.sname %> <%= cl.name %> <%= cl.fname %></td>					
+						<td><%= link_to " " , edit_client_path(cl),:method => :get, :class=> "glyphicon glyphicon-pencil", :title => 'Редактировать клиента' %>
+							<% if current_user.superadmin_role? || current_user.supervisor_role? then %>
+								<%= link_to " " , clients_destroy_path(:id => cl.id),:method => :get, :class=> "glyphicon glyphicon-remove", :title => 'Удалить клиента', data: { confirm: "Удалить клиента #{cl.id} #{cl.sname} #{cl.name} #{cl.fname}?" } %>
+							<% end %>
+							<%= link_to " " , new_contract_path(:client_id => cl.id),:method => :get, :class=> "glyphicon glyphicon-file", :title => 'Создать контракт' %>
+							<%= link_to " " , contracts_newbroni_path(:client_id => cl.id),:method => :get, :class=> "glyphicon glyphicon-flag", :title => 'Создать бронь' %>
+							<%= " ID=#{cl.id}" %></td>
+						<td><%= cl.pemail %> <%= cl.tel %></td>
+						<td><%= cl.pseria %><%= if cl.dn then " от #{cl.dn}" end %></td>
+						<td><%= cl.bdate %></td>
+						<td><%= cl.idno %></td>
+						<td><%= cl.de %></td>
+						<td><%= cl.address %></td>											
+					</tr>		
+			<% end %>		
+		</tbody>
+	</table>
+
 
 <script>
 $(document).ready(function() {
-    var table = $('#clienttable').DataTable( {
-        "order": [[ 0, "asc" ]],
+    var t = $('#clienttable').DataTable( {
+        "order": [ 2, "asc" ],
         "language": {
             "lengthMenu": "Отображать _MENU_ строк на странице",
             "zeroRecords": "Ничего не найдено - увы...",
@@ -19,55 +73,33 @@ $(document).ready(function() {
             }
         },
         "pagingType": "full_numbers",
-        "pageLength": 25,
+        "pageLength": 20,
          "fixedHeader": {
                headerOffset: ($('#navMenu').outerHeight() - 1)
-         }
+         },
+         responsive: {
+            details: {
+                type: 'column'
+            }
+        },
+        columnDefs: [ {
+            className: 'control',
+            orderable: false,
+            targets:   0
+            }, {
+            "searchable": false,
+            "orderable": false,
+            "targets": 1
+            },
+         { type: 'de_date', targets: 6 }
+         ]      
     } ); 
+    
+    t.on( 'order.dt search.dt', function () {
+        t.column(1, {search:'applied', order:'applied'}).nodes().each( function (cell, i) {
+            cell.innerHTML = i+1;
+        } );
+    } ).draw();
+    
 } );
-</script>	  	  
-	 	  	
-	<table id="clienttable" class="table table-bordered table-condensed table-hover table-striped responsive compact" style="width:100%">	
-		<thead>
-			<tr class="info">
-			   <th class="all">ФИО</th>		
-			   <th class="none">......</th>
-			   <th class="min-tablet">E-mail Телефон</th>
-			   <th class="min-desktop">Паспорт</th>
-			   <th class="min-desktop">Дата рождения</th>
-			   <th class="min-desktop">IDNP</th>
-			   <th class="min-desktop">Страна</th>			   
-			   <th class="min-desktop">Адрес</th>			   
-			</tr>	
-		</thead>
-		<tfoot>
-			<tr class="info">
-			   <th class="all">ФИО</th>		
-			   <th class="none">......</th>
-			   <th class="min-tablet">E-mail Телефон</th>
-			   <th class="min-tablet-l">Паспорт</th>
-			   <th class="min-tablet-l">Дата рождения</th>
-			   <th class="min-tablet-l">IDNP</th>
-			   <th class="min-tablet-l">Страна</th>			   
-			   <th class="min-desktop">Адрес</th>			   
-			</tr>	
-		</tfoot>		
-		<tbody>
-			<% @clients.each do |cl| %>
-					<% if cl.updated_at > (Time.now.ago($GreenDelay)) %><tr class="success"><% else %><tr><% end %>
-						<td><%= cl.sname %> <%= cl.name %> <%= cl.fname %></td>					
-						<td><%= link_to " " , edit_client_path(cl),:method => :get, :class=> "glyphicon glyphicon-pencil", :title => 'Редактировать клиента' %>
-							<%= link_to " " , clients_destroy_path(:id => cl.id),:method => :get, :class=> "glyphicon glyphicon-remove", :title => 'Удалить клиента', data: { confirm: "Удалить клиента #{cl.id} #{cl.sname} #{cl.name} #{cl.fname}?" } %>
-							<%= link_to " " , new_contract_path(:client_id => cl.id),:method => :get, :class=> "glyphicon glyphicon-file", :title => 'Создать контракт' %>
-							<%= link_to " " , contracts_newbroni_path(:client_id => cl.id),:method => :get, :class=> "glyphicon glyphicon-flag", :title => 'Создать бронь' %>
-							<%= " ID=#{cl.id}" %></td>
-						<td><%= cl.pemail %> <%= cl.tel %></td>
-						<td><%= cl.pseria %><%= if cl.dn then " от #{cl.dn}" end %></td>
-						<td><%= cl.bdate %></td>
-						<td><%= cl.idno %></td>
-						<td><%= cl.de %></td>
-						<td><%= cl.address %></td>											
-					</tr>		
-			<% end %>		
-		</tbody>
-	</table>
+</script>	
