--- a/app/views/contracts/indexarc.html.erb
+++ b/app/views/contracts/indexarc.html.erb
@@ -1,46 +1,10 @@
 <% provide(:title, 'Архив') %>
-	  	  
-<script>
-$(document).ready(function() {
-    var table = $('#pstable').DataTable( {
-        "order": [[ 3, "desc" ],[ 1, "desc" ]],
-        "language": {
-            "lengthMenu": "Отображать _MENU_ строк на странице",
-            "zeroRecords": "Ничего не найдено - увы...",
-            "info": "Страница _PAGE_ из _PAGES_",
-            "infoEmpty": "Нет доступных строк",
-            "infoFiltered": "(Отфильтровано из _MAX_ строк)",
-            "search": "Поиск",
-             paginate: {
-                first:      "<<",
-                previous:   "<",
-                next:       ">",
-                last:       ">>"
-            }
-        },
-        "pagingType": "full_numbers",
-        "pageLength": 25,
-         "fixedHeader": {
-               headerOffset: ($('#navMenu').outerHeight() - 1)
-         },
-        responsive: {
-            details: {
-                type: 'column'
-            }
-        },
-        columnDefs: [ {
-            className: 'control',
-            orderable: false,
-            targets:   0
-        } ]
-    } ); 
-} );
-</script>	
-	  	 	  	
+	  	
 	<table id="pstable" class="table table-bordered table-condensed table-hover table-striped dt-responsive nowrap compact" style="width:100%">	
 		<thead>
 			<tr  class="info">
-			   <th style="width:5%"></th>
+			   <th style="width:3%"></th>
+			   <th style="width:2%" class="all"></th>	
 			   <th class="all" style="width:5%">№</th>	
 			   <th class="none">.......</th>	
 		       <th class="min-desktop">От</th>
@@ -59,7 +23,8 @@ $(document).ready(function() {
 		</thead>
 		<tfoot>
 			<tr  class="info">
-			   <th style="width:5%"></th>	
+			   <th style="width:3%"></th>
+			   <th style="width:2%" class="all"></th>		
 			   <th class="all" style="width:5%">№</th>	
 			   <th class="none">.......</th>	
 		       <th>От</th>
@@ -80,12 +45,16 @@ $(document).ready(function() {
 			<% @contracts.each do |c| %>
 					<% if c.updated_at > (Time.now.ago($GreenDelay)) %><tr class="success"><% else %><tr><% end %>
 						<td></td>
+						<td></td>
 						<td><%= link_to ("#{c.id}" + if c.cnum!='' then "/#{c.cnum} " else " " end), contracts_show_path(:id => c.id),:method => :get, :title => 'Посмотреть контракт' %></td>
 						<td><%= link_to " " , contracts_show_path(:id => c.id),:method => :get, :class=> "glyphicon glyphicon-eye-open", :title => 'Посмотреть контракт' %>							
 							<%= link_to " " , contracts_edit_path(:id => c.id),:method => :get, :class=> "glyphicon glyphicon-pencil", :title => 'Редактировать контракт' %>
 							<%= link_to image_tag('Apps-Pdf-B-icon.png', :alt => "PDF", :width => "20", :height => "20"), contracts_show_path(:id => c.id, format: "pdf") %>
-							<%= link_to " " , contracts_destroy_path(:id => c.id),:method => :get, :class=> "glyphicon glyphicon-remove", :title => 'Удалить контакт', data: { confirm: "Удалить контракт #{c.id}/#{c.cnum} от #{c.order_date.strftime('%d.%m.%Y')}?" } %>
-						<td><%= c.stdate.strftime('%Y.%m.%d') %></td>
+							<% if current_user.superadmin_role? || current_user.supervisor_role? then %>
+								<%= link_to " " , contracts_destroy_path(:id => c.id),:method => :get, :class=> "glyphicon glyphicon-remove", :title => 'Удалить контакт', data: { confirm: "Удалить контракт #{c.id}/#{c.cnum} от #{c.order_date.strftime('%d.%m.%Y')}?" } %>
+						    <% end %>
+						</td>
+						<td><%= c.stdate.strftime('%d.%m.%Y') %></td>
 			    <!--    <td><%= c.order_date.strftime('%Y.%m.%d') %></td> -->
 						<td><%= unless c.user.nil? then c.user.username end %></td>
 						<td><% unless c.car.nil? then %><%= link_to "#{c.car.marca} #{c.car.gnum}" , cars_show_path(:id => c.car.id),:method => :get, :title => 'Посмотреть авто' %><% end %></td>
@@ -103,4 +72,56 @@ $(document).ready(function() {
 			<% end %>			
 		</tbody>
 	</table>
+	
+	  	  
+<script>
+$(document).ready(function() {
+    var t = $('#pstable').DataTable( {
+        "order": [[ 4, "desc" ],[ 2, "desc" ]],
+        "language": {
+            "lengthMenu": "Отображать _MENU_ строк на странице",
+            "zeroRecords": "Ничего не найдено - увы...",
+            "info": "Страница _PAGE_ из _PAGES_",
+            "infoEmpty": "Нет доступных строк",
+            "infoFiltered": "(Отфильтровано из _MAX_ строк)",
+            "search": "Поиск",
+             paginate: {
+                first:      "<<",
+                previous:   "<",
+                next:       ">",
+                last:       ">>"
+            }
+        },
+        "pagingType": "full_numbers",
+        "pageLength": 20,
+         "fixedHeader": {
+               headerOffset: ($('#navMenu').outerHeight() - 1)
+         },
+        responsive: {
+            details: {
+                type: 'column'
+            }
+        },
+        columnDefs: [ {
+            className: 'control',
+            orderable: false,
+            targets:   0
+            }, {
+            "searchable": false,
+            "orderable": false,
+            "targets": 1
+            },
+         { type: 'de_datetime', targets: [7,8] },
+         { type: 'de_date', targets: 4 }
+         ]      
+    } ); 
+    
+    t.on( 'order.dt search.dt', function () {
+        t.column(1, {search:'applied', order:'applied'}).nodes().each( function (cell, i) {
+            cell.innerHTML = i+1;
+        } );
+    } ).draw();
+} );
+</script>	
+	  	 	
 
