--- a/app/views/cparams/show.html.erb
+++ b/app/views/cparams/show.html.erb
@@ -1,5 +1,6 @@
 <% provide(:title, 'Курс') %>
 
+<% if current_user.superadmin_role? || current_user.supervisor_role? %>
   <div class="row">	  	
 	<div class="col-md-4">	    	    
   	  <div class="panel panel-info">
@@ -14,12 +15,13 @@
 	  </div> <!--panel-body--->    
 	 </div> <!--panel-->
    </div>
- </div>	
+ </div>
+ <% end %>	
  
 <script>
 $(document).ready(function() {
-    var table = $('#pstable').DataTable( {
-        "order": [[ 0, "desc" ]],
+    var t = $('#pstable').DataTable( {
+        "order": [[ 2, "desc" ]],
         "language": {
             "lengthMenu": "Отображать _MENU_ строк на странице",
             "zeroRecords": "Ничего не найдено - увы...",
@@ -35,11 +37,33 @@ $(document).ready(function() {
             }
         },
         "pagingType": "full_numbers",
-        "pageLength": 25,
+        "pageLength": 10,
          "fixedHeader": {
                headerOffset: ($('#navMenu').outerHeight() - 1)
-         }
-    } );
+         },
+         responsive: {
+            details: {
+                type: 'column'
+            }
+        },
+        columnDefs: [ {
+            className: 'control',
+            orderable: false,
+            targets:   0
+            }, {
+            "searchable": false,
+            "orderable": false,
+            "targets": 1
+            },
+         { type: 'de_datetime', targets: 2 }
+         ]      
+    } ); 
+    
+    t.on( 'order.dt search.dt', function () {
+        t.column(1, {search:'applied', order:'applied'}).nodes().each( function (cell, i) {
+            cell.innerHTML = i+1;
+        } );
+    } ).draw();
     
 } );
 </script>	  	  
@@ -47,12 +71,16 @@ $(document).ready(function() {
  <table id="pstable" class="table table-bordered table-condensed table-hover table-striped dt-responsive nowrap compact" style="width:100%">
   <thead>
     <tr class="info">
+      <th style="width:3%"></th>
+      <th style="width:2%" class="all">№</th>
       <th class="all">Дата</th>	
       <th class="all">Курс, MDL</th> 
     </tr>
   </thead>
   <tfoot>
     <tr class="info">
+      <th style="width:3%"></th>
+      <th style="width:2%" class="all">№</th>	
       <th class="all">Дата</th>	
       <th class="all">Курс, MDL</th> 
     </tr>
@@ -60,7 +88,9 @@ $(document).ready(function() {
   <tbody>
   <% @cparams.each do |item| %>
     <% if item.updated_at > (Time.now.ago($GreenDelay)) %><tr class="success"><% else %><tr><% end %>
-        <td><%= item.created_at.strftime('%Y.%m.%d %R') %></td>	
+    	<td></td>
+    	<td></td>
+        <td><%= item.created_at.strftime('%d.%m.%Y %R') %></td>	
 	  	<td><%= number_to_currency(item.curs,:unit=>'') %></td>
     </tr>
   <% end %>    
