--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,3 +1,4 @@
+<!--
 <% flash.each do |name, msg| %>
 	<div class="alert alert-<%= case name when 'notice'  then 'success' 
 	                                      when 'alert'   then 'warning'
@@ -6,4 +7,14 @@
 	  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 	  <%= content_tag :div, msg, :id => "flash_#{name}" if msg.is_a?(String) %>
 	</div>    
+<% end %>
+-->
+
+<% unless flash.empty? %>
+     <script type="text/javascript">
+          <% flash.each do |f| %>
+	      <% type = f[0].to_s.gsub('alert', 'error').gsub('notice', 'info') %>
+	     	 toastr['<%= type %>']('<%= f[1] %>');
+	   <% end %>
+     </script>
 <% end %>
