--- a/app/views/tehservices/index.html.erb
+++ b/app/views/tehservices/index.html.erb
@@ -2,8 +2,8 @@
 
 <script>
 $(document).ready(function() {
-    var table = $('#pstable').DataTable( {
-        "order": [[ 1, "desc" ]],
+    var t = $('#pstable').DataTable( {
+        "order": [[ 2, "desc" ]],
         "language": {
             "lengthMenu": "Отображать _MENU_ строк на странице",
             "zeroRecords": "Ничего не найдено - увы...",
@@ -32,31 +32,48 @@ $(document).ready(function() {
             className: 'control',
             orderable: false,
             targets:   0
-        } ] 
+        },{
+            "searchable": false,
+            "orderable": false,
+            "targets": 1
+            },
+         { type: 'de_datetime', targets: 2 }
+         ]      
     } ); 
+    
+    t.on( 'order.dt search.dt', function () {
+        t.column(1, {search:'applied', order:'applied'}).nodes().each( function (cell, i) {
+            cell.innerHTML = i+1;
+        } );
+    } ).draw();
+    
 } );
 </script>	  	  
 
- <h4 style="color: blue" align="center"><%= "#{@car.marca} #{@car.gnum}" %></h4>
+ <h4 style="color: blue" align="center"><span class="glyphicon glyphicon-wrench" aria-hidden="true"></span><%= "#{@car.marca} #{@car.gnum}" %></h4>
  
  <table id="pstable" class="table table-bordered table-condensed table-hover table-striped dt-responsive nowrap compact" style="width:100%">
   <thead>
     <tr class="info">
-      <th style="width:5%"></th>	
+      <th style="width:3%"></th>
+	  <th style="width:2%" class="all"></th>	
       <th class="all">Дата и время выполнения</th>	
       <th class="none">.........</th>
       <th>Тип</th>
-      <th>Цена</th> 
+      <th>Цена</th>
+      <th>Пробег</th> 
       <th>Примечание</th>
     </tr>
   </thead>
   <tfoot>
     <tr class="info">
-      <th style="width:5%"></th>
+      <th style="width:3%"></th>
+	  <th style="width:2%" class="all"></th>
       <th class="all">Дата и время выполнения</th>	
       <th class="none">.........</th>
       <th>Тип</th>
-      <th>Цена</th> 
+      <th>Цена</th>
+      <th>Пробег</th> 
       <th>Примечание</th>
     </tr>
   </tfoot>
@@ -64,18 +81,23 @@ $(document).ready(function() {
   <% @tehservices.each do |item| %>
     <% if item.updated_at > (Time.now.ago($GreenDelay)) %><tr class="success"><% else %><tr><% end %>
         <td></td>
-        <td><%= item.sdate.strftime('%Y.%m.%d %R') %></td>	
+        <td></td>
+        <td><%= item.sdate.strftime('%d.%m.%Y %R') %></td>	
 	  	<td><%= link_to " " , tehservices_edit_path(:id => item.id), :class=> "glyphicon glyphicon-pencil", :title => 'Редактировать' %>
-			<%= link_to " " , tehservices_destroy_path(:id => item.id), :class=> "glyphicon glyphicon-remove", :title => 'Удалить', 
+	  		<% if current_user.superadmin_role? || current_user.supervisor_role? then %>
+				<%= link_to " " , tehservices_destroy_path(:id => item.id), :class=> "glyphicon glyphicon-remove", :title => 'Удалить', 
 			                  data: { confirm: "Удалить ТО № #{item.id} от #{item.sdate.strftime('%d.%m.%Y %R')}?" } %>
+			<% end %>
 			<%= " ID=#{item.id}" %></td>
-	  	<td><%= case item.stype when 1 then "Замена масла и фильтров"  
+	  	<td><%= case item.stype when 0 then "Пробег"
+	  		                    when 1 then "Замена масла и фильтров"  
 	  		                    when 3 then "Техническое обслуживание" 
                                 when 2 then "Страховка"
                                 when 4 then "Техосмотр"
                                 else  item.stype 
 	  		 end %></td>
 	  	<td><%= number_to_currency(item.sprice,:unit=>'€') %></td>
+	  	<td><%= if item.wlong then item.wlong.parcurs end %></td>
 	  	<td><%= item.comments %></td>
     </tr>
   <% end %>    
