v20180416 new user from users

--- a/app/views/clients/edit.html.erb
+++ b/app/views/clients/edit.html.erb
@@ -13,7 +13,7 @@
 		  	<div class="panel-body">
 					<%= f.input :sname, label: "Фамилия", as: :string, :input_html => { :size => 25} %>
 					<%= f.input :name, label: "Имя", as: :string, :input_html => { :size => 25} %>
-					<%= f.input :fname, label: "Отчество", as: :string, :input_html => { :size => 25} %>
+					<%= f.input :fname, label: "Отчество", as: :string, :input_html => { :size => 25}, as: :hidden %>
 					<%= f.input :pseria, label: "Серия и номер паспорта", as: :string, :input_html => { :size => 25} %>
                     <label for='bdate' class="control-label">Дата рождения</label><%= date_field_tag 'bdate', if @client.bdate.nil? then nil else @client.bdate.to_date end, class: "form-control" %>
                     <label for='dn' class="control-label">Дата выдачи паспорта</label><%= date_field_tag 'dn',if @client.dn.nil? then nil else @client.dn.to_date end, class: "form-control" %>
