--- a/app/views/clients/new.html.erb
+++ b/app/views/clients/new.html.erb
@@ -12,7 +12,7 @@
 		  	<div class="panel-body">
 					<%= f.input :sname, label: "Фамилия", as: :string, :input_html => { :size => 25} %>
 					<%= f.input :name, label: "Имя", as: :string, :input_html => { :size => 25} %>
-					<%= f.input :fname, label: "Отчество", as: :string, :input_html => { :size => 25} %>
+					<%= f.input :fname, label: "Отчество", as: :string, :input_html => { :size => 25}, as: :hidden %>
 					<%= f.input :pseria, label: "Серия и номер паспорта", as: :string, :input_html => { :size => 25} %>
                     <label for='bdate' class="control-label">Дата рождения</label><%= date_field_tag 'bdate',nil, class: "form-control" %><br>
                     <label for='dn' class="control-label">Дата выдачи паспорта</label><%= date_field_tag 'dn',nil, class: "form-control" %><br>
