--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,4 +1,4 @@
-<%= link_to "Back", :back, class: "btn btn-info" %> 
+
 <h2>Edit <%= resource_name.to_s.humanize %><%= " #{current_user.username}" %></h2>
 
 <div class="jumbotron">
@@ -6,6 +6,7 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
+  	<%= f.input :username, required: true, disabled: false %>
     <%= f.input :email, required: true, autofocus: true %>
 
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
@@ -18,7 +19,7 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Update", class: "btn btn-primary" %>
+    <%= f.button :submit, "Update", class: "btn btn-primary" %> <%= link_to "Back", :back, class: "btn btn-warning" %>
   </div>
 <% end %>
 
